--- a/index.html
+++ b/index.html
@@ -2,101 +2,300 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Portfolio – Data Scientist</title>
+  <title>Djénéba Coulibaly — Portfolio Data</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Portfolio Data — projets en data science, économétrie, visualisation et optimisation." />
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+  <!-- NAV -->
+  <nav class="nav">
+    <a class="brand" href="#top">Djénéba</a>
+    <div class="nav-links">
+      <a href="#projects">Projets</a>
+      <a href="#skills">Compétences</a>
+      <a href="#certs">Certifications</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </nav>
 
   <!-- HERO -->
-  <section class="hero">
-    <div class="hero-text slide">
-      <h1>Prénom NOM</h1>
-      <h2>Data Scientist – Assurance & Optimisation</h2>
-      <p>M2 Statistiques & Data Science</p>
+  <header id="top" class="hero">
+    <div class="hero-left slide">
+      <div class="pill">Recherche CDI Junior — Data / Data Science</div>
+      <h1>Djénéba Coulibaly</h1>
+      <p class="subtitle">Data Scientist Junior • Économétrie & Statistique • ML • Data Viz</p>
 
-      <div class="buttons">
-        <a href="assets/CV.pdf" target="_blank">Télécharger le CV</a>
-        <a href="https://github.com/tonusername" target="_blank">GitHub</a>
-        <a href="https://linkedin.com/in/tonprofil" target="_blank">LinkedIn</a>
+      <p class="lead">
+        Je conçois des projets data de bout en bout : exploration, modélisation, visualisation,
+        et création d’outils exploitables. (Python • R • SQL)
+      </p>
+
+      <div class="cta">
+        <a class="btn primary" href="#projects">Voir mes projets</a>
+        <a class="btn ghost" href="assets/cv.pdf" target="_blank" rel="noopener">CV (PDF)</a>
+        <a class="btn ghost" href="https://www.linkedin.com/in/djénéba-coulibaly-7a24b9272" target="_blank" rel="noopener">LinkedIn</a>
+      </div>
+
+      <div class="meta">
+        <span>📍 Marseille</span>
+        <span>✉️ djenebacoulibaly.pro@gmail.com</span>
+        <span>☎️ +33 7 58 08 06 79</span>
       </div>
     </div>
 
-    <div class="hero-video slide">
-      <video autoplay muted loop>
-        <source src="assets/video.mp4" type="video/mp4">
-      </video>
+    <div class="hero-right slide">
+      <div class="profile-card">
+        <img class="avatar" src="assets/photo-pro.jpg" alt="Photo professionnelle — Djénéba Coulibaly" />
+        <div class="profile-card-body">
+          <div class="profile-title">Focus</div>
+          <ul class="compact">
+            <li>Machine Learning & économétrie</li>
+            <li>Data visualization & storytelling</li>
+            <li>Projets data orientés décision</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Optionnel : vidéo élégante (si tu veux) -->
+      <!--
+      <div class="video-frame">
+        <video autoplay muted loop playsinline>
+          <source src="assets/video.mp4" type="video/mp4">
+        </video>
+      </div>
+      -->
+    </div>
+  </header>
+
+  <!-- HIGHLIGHTS -->
+  <section class="section slide">
+    <div class="section-head">
+      <h2>Ce que tu trouveras ici</h2>
+      <p>Une sélection de projets concrets (issus de mon parcours) + mon stack technique.</p>
+    </div>
+
+    <div class="kpis">
+      <div class="kpi">
+        <div class="kpi-big">5+</div>
+        <div class="kpi-label">projets data (Python/R/SQL)</div>
+      </div>
+      <div class="kpi">
+        <div class="kpi-big">Viz</div>
+        <div class="kpi-label">cartographie & dataviz</div>
+      </div>
+      <div class="kpi">
+        <div class="kpi-big">ML</div>
+        <div class="kpi-label">prédiction & évaluation</div>
+      </div>
+      <div class="kpi">
+        <div class="kpi-big">Apps</div>
+        <div class="kpi-label">VBA & web</div>
+      </div>
     </div>
   </section>
 
-  <!-- PROFIL -->
-  <section class="section slide">
-    <h3>Profil</h3>
-    <p>
-      Data Scientist spécialisée en machine learning, statistiques et
-      optimisation, avec une expérience concrète en assurance, courtage
-      et logistique. Orientée impact business et aide à la décision.
-    </p>
+  <!-- PROJECTS -->
+  <section id="projects" class="section slide">
+    <div class="section-head">
+      <h2>Projets sélectionnés</h2>
+      <p>Chaque projet est présenté avec objectif, stack et livrables. Ajoute tes liens GitHub quand tu veux.</p>
+    </div>
+
+    <div class="projects-grid">
+      <!-- Projet 1 -->
+      <article class="project">
+        <div class="project-media">
+          <!-- Remplace par une image de projet si tu en as : assets/p1.webp -->
+          <div class="project-placeholder">Simu Marché</div>
+          <!-- <img src="assets/p1.webp" alt="Simulation de marché boursier"> -->
+        </div>
+        <div class="project-body">
+          <h3>Simulation de marché boursier : Trader vs IA</h3>
+          <p class="project-desc">
+            Création d’un jeu de simulation en Python : interactions, règles de marché, et logique d’agent
+            pour simuler des décisions.
+          </p>
+          <div class="tags">
+            <span>Python</span><span>Simulation</span><span>Logique agent</span>
+          </div>
+          <div class="project-links">
+            <a href="#" target="_blank" rel="noopener">Repo GitHub</a>
+            <a href="#" target="_blank" rel="noopener">Démo / Notebook</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Projet 2 -->
+      <article class="project">
+        <div class="project-media">
+          <div class="project-placeholder">Dataviz Canicule</div>
+          <!-- <img src="assets/p2.webp" alt="Cartographie canicule Italie"> -->
+        </div>
+        <div class="project-body">
+          <h3>Cartographie & dataviz : canicule été 2022 en Italie</h3>
+          <p class="project-desc">
+            Visualisation des impacts et cartographie exploratoire pour comprendre les zones
+            les plus touchées et communiquer clairement les résultats.
+          </p>
+          <div class="tags">
+            <span>Dataviz</span><span>Cartographie</span><span>Storytelling</span>
+          </div>
+          <div class="project-links">
+            <a href="#" target="_blank" rel="noopener">Repo GitHub</a>
+            <a href="#" target="_blank" rel="noopener">Rapport / Slides</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Projet 3 -->
+      <article class="project">
+        <div class="project-media">
+          <div class="project-placeholder">Prédiction Traffic</div>
+          <!-- <img src="assets/p3.webp" alt="Modélisation recettes trafic élevé"> -->
+        </div>
+        <div class="project-body">
+          <h3>Modélisation : prédire les recettes à fort trafic</h3>
+          <p class="project-desc">
+            Projet en R : préparation des données, variables explicatives, entraînement de modèles,
+            évaluation, et recommandations.
+          </p>
+          <div class="tags">
+            <span>R</span><span>ML</span><span>Évaluation</span>
+          </div>
+          <div class="project-links">
+            <a href="#" target="_blank" rel="noopener">Repo GitHub</a>
+            <a href="#" target="_blank" rel="noopener">Notebook / Rmd</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Projet 4 -->
+      <article class="project">
+        <div class="project-media">
+          <div class="project-placeholder">App Santé VBA</div>
+        </div>
+        <div class="project-body">
+          <h3>Application “Ma santé et moi” (type Doctolib) — VBA</h3>
+          <p class="project-desc">
+            Conception d’une application de gestion/suivi santé : écrans, formulaires, logique,
+            et automatisations.
+          </p>
+          <div class="tags">
+            <span>VBA</span><span>Application</span><span>Automatisation</span>
+          </div>
+          <div class="project-links">
+            <a href="#" target="_blank" rel="noopener">Screenshots</a>
+            <a href="#" target="_blank" rel="noopener">Fichier / Demo</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Projet 5 -->
+      <article class="project">
+        <div class="project-media">
+          <div class="project-placeholder">Site TVstars</div>
+        </div>
+        <div class="project-body">
+          <h3>TVstars — Site web pour visualiser films & séries</h3>
+          <p class="project-desc">
+            Projet web : conception d’un site orienté affichage/visualisation, structure,
+            pages, et UI.
+          </p>
+          <div class="tags">
+            <span>HTML</span><span>CSS</span><span>JavaScript</span>
+          </div>
+          <div class="project-links">
+            <a href="#" target="_blank" rel="noopener">Repo GitHub</a>
+            <a href="#" target="_blank" rel="noopener">Site en ligne</a>
+          </div>
+        </div>
+      </article>
+    </div>
+
+    <div class="note">
+      Astuce : garde 5–6 projets max, mais fais-les “clean” (README, résultats, captures).
+    </div>
   </section>
 
-  <!-- EXPERIENCES -->
-  <section class="section slide">
-    <h3>Expériences</h3>
-
-    <div class="card">
-      <h4>Data Scientist – Alternance | Diot-Siaci</h4>
-      <ul>
-        <li>Analyses de données assurance & courtage</li>
-        <li>Développement de modèles analytiques</li>
-        <li>Pipelines ETL & automatisation</li>
-      </ul>
+  <!-- SKILLS -->
+  <section id="skills" class="section slide">
+    <div class="section-head">
+      <h2>Stack & compétences</h2>
+      <p>Techniques et outils indiqués dans mon parcours. :contentReference[oaicite:1]{index=1}</p>
     </div>
 
-    <div class="card">
-      <h4>Data Scientist – Stage | Deki (Logistique)</h4>
-      <ul>
-        <li>Optimisation de tournées logistiques</li>
-        <li>Recherche opérationnelle & Python</li>
-        <li>Analyse de performance</li>
-      </ul>
-    </div>
-
-    <div class="card">
-      <h4>Data Analyst – Bénévolat</h4>
-      <ul>
-        <li>Tableaux de bord & indicateurs</li>
-        <li>Aide à la décision</li>
-      </ul>
-    </div>
-  </section>
-
-  <!-- COMPETENCES -->
-  <section class="section slide">
-    <h3>Compétences & outils</h3>
-
-    <div class="grid">
-      <div class="card">Python, SQL</div>
-      <div class="card">Machine Learning</div>
-      <div class="card">Statistiques avancées</div>
-      <div class="card">Optimisation (OR-Tools, PuLP)</div>
-      <div class="card">ETL & automatisation</div>
-      <div class="card">Power BI, Excel, Git</div>
+    <div class="skills-grid">
+      <div class="skill-card">
+        <h3>Langages</h3>
+        <p>Python • R • SQL • JavaScript • MATLAB • VBA • PHP</p>
+      </div>
+      <div class="skill-card">
+        <h3>Data & ML</h3>
+        <p>EDA • Modélisation statistique • Machine Learning • NLP (bases) • Deep Learning (bases)</p>
+      </div>
+      <div class="skill-card">
+        <h3>Librairies</h3>
+        <p>scikit-learn • pandas • NumPy • Matplotlib • Seaborn • Tkinter</p>
+      </div>
+      <div class="skill-card">
+        <h3>BI & Outils</h3>
+        <p>Power BI • Tableau • MySQL • Git/GitHub • Bootstrap</p>
+      </div>
+      <div class="skill-card">
+        <h3>Langues</h3>
+        <p>Français (maternelle) • Bambara (maternelle) • Anglais (intermédiaire)</p>
+      </div>
     </div>
   </section>
 
   <!-- CERTIFICATIONS -->
-  <section class="section slide">
-    <h3>Certifications</h3>
-    <ul>
-      <li>Machine Learning – DataCamp / Coursera</li>
-      <li>Python for Data Science</li>
-      <li>SQL for Data Analysis</li>
-    </ul>
+  <section id="certs" class="section slide">
+    <div class="section-head">
+      <h2>Certifications</h2>
+      <p>Courtes, pertinentes, vérifiables. :contentReference[oaicite:2]{index=2}</p>
+    </div>
+
+    <div class="certs">
+      <div class="cert">
+        <div class="cert-title">IA générative</div>
+        <div class="cert-sub">LinkedIn Learning</div>
+      </div>
+      <div class="cert">
+        <div class="cert-title">Power BI</div>
+        <div class="cert-sub">En cours</div>
+      </div>
+    </div>
   </section>
 
-  <footer>
-    <p>© 2026 – Prénom NOM</p>
+  <!-- CONTACT -->
+  <section id="contact" class="section slide">
+    <div class="section-head">
+      <h2>Contact</h2>
+      <p>Ouverte aux opportunités CDI junior (Data Scientist / Data Analyst).</p>
+    </div>
+
+    <div class="contact-card">
+      <div>
+        <div class="contact-label">Email</div>
+        <a href="mailto:djenebacoulibaly.pro@gmail.com">djenebacoulibaly.pro@gmail.com</a>
+      </div>
+      <div>
+        <div class="contact-label">LinkedIn</div>
+        <a href="https://www.linkedin.com/in/djénéba-coulibaly-7a24b9272" target="_blank" rel="noopener">
+          Profil LinkedIn
+        </a>
+      </div>
+      <div>
+        <div class="contact-label">Téléphone</div>
+        <a href="tel:+33758080679">+33 7 58 08 06 79</a>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <p>© 2026 — Djénéba Coulibaly</p>
   </footer>
 
   <script src="script.js"></script>
