--- a/index.html
+++ b/index.html
@@ -2,293 +2,288 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Djénéba Coulibaly — Portfolio Data</title>
+  <title>Djénéba Coulibaly — Data Scientist</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Portfolio Data — projets en data science, économétrie, visualisation et optimisation." />
+  <meta name="description" content="Portfolio Data Scientist — Machine Learning, NLP, Optimisation, Déploiement Docker & Cloud." />
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <!-- NAV -->
+
+  <!-- NAVIGATION -->
   <nav class="nav">
-    <a class="brand" href="#top">Djénéba</a>
+    <a class="brand" href="#top">Djénéba Coulibaly</a>
     <div class="nav-links">
       <a href="#projects">Projets</a>
       <a href="#skills">Compétences</a>
-      <a href="#certs">Certifications</a>
       <a href="#contact">Contact</a>
     </div>
   </nav>
 
   <!-- HERO -->
   <header id="top" class="hero">
-    <div class="hero-left slide">
-      <div class="pill">Recherche CDI Junior — Data / Data Science</div>
+    <div class="hero-left">
+
+      <div class="pill">
+        Disponible CDI — Data Scientist (Assurance / Conseil / Big 4)
+      </div>
+
       <h1>Djénéba Coulibaly</h1>
-      <p class="subtitle">Data Scientist Junior • Économétrie & Statistique • ML • Data Viz</p>
+
+      <p class="subtitle">
+        Data Scientist • Machine Learning • NLP • Optimisation • Déploiement Docker
+      </p>
 
       <p class="lead">
-        Je conçois des projets data de bout en bout : exploration, modélisation, visualisation,
-        et création d’outils exploitables. (Python • R • SQL)
+        Data Scientist spécialisée en modélisation prédictive et analyse décisionnelle.
+        Je développe des solutions data de bout en bout : préparation des données,
+        Machine Learning, NLP, visualisation et déploiement (Docker & Cloud).
       </p>
 
       <div class="cta">
         <a class="btn primary" href="#projects">Voir mes projets</a>
-        <a class="btn ghost" href="assets/cv.pdf" target="_blank" rel="noopener">CV (PDF)</a>
-        <a class="btn ghost" href="https://www.linkedin.com/in/djénéba-coulibaly-7a24b9272" target="_blank" rel="noopener">LinkedIn</a>
+        <a class="btn ghost" href="assets/cv.pdf" target="_blank">CV (PDF)</a>
+        <a class="btn ghost" href="https://www.linkedin.com/in/djénéba-coulibaly-7a24b9272" target="_blank">LinkedIn</a>
+        <a class="btn ghost" href="https://github.com/djey31" target="_blank">GitHub</a>
       </div>
 
       <div class="meta">
-        <span>📍 Marseille</span>
+        <span>📍 Paris</span>
         <span>✉️ djenebacoulibaly.pro@gmail.com</span>
         <span>☎️ +33 7 58 08 06 79</span>
       </div>
-    </div>
 
-    <div class="hero-right slide">
-      <div class="profile-card">
-        <img class="avatar" src="assets/photo-pro.jpg" alt="Photo professionnelle — Djénéba Coulibaly" />
-        <div class="profile-card-body">
-          <div class="profile-title">Focus</div>
-          <ul class="compact">
-            <li>Machine Learning & économétrie</li>
-            <li>Data visualization & storytelling</li>
-            <li>Projets data orientés décision</li>
-          </ul>
-        </div>
-      </div>
-
-      <!-- Optionnel : vidéo élégante (si tu veux) -->
-      <!--
-      <div class="video-frame">
-        <video autoplay muted loop playsinline>
-          <source src="assets/video.mp4" type="video/mp4">
-        </video>
-      </div>
-      -->
     </div>
   </header>
 
-  <!-- HIGHLIGHTS -->
-  <section class="section slide">
-    <div class="section-head">
-      <h2>Ce que tu trouveras ici</h2>
-      <p>Une sélection de projets concrets (issus de mon parcours) + mon stack technique.</p>
-    </div>
 
-    <div class="kpis">
-      <div class="kpi">
-        <div class="kpi-big">5+</div>
-        <div class="kpi-label">projets data (Python/R/SQL)</div>
-      </div>
-      <div class="kpi">
-        <div class="kpi-big">Viz</div>
-        <div class="kpi-label">cartographie & dataviz</div>
-      </div>
-      <div class="kpi">
-        <div class="kpi-big">ML</div>
-        <div class="kpi-label">prédiction & évaluation</div>
-      </div>
-      <div class="kpi">
-        <div class="kpi-big">Apps</div>
-        <div class="kpi-label">VBA & web</div>
-      </div>
-    </div>
-  </section>
+  <!-- PROJETS -->
+  <section id="projects" class="section">
 
-  <!-- PROJECTS -->
-  <section id="projects" class="section slide">
     <div class="section-head">
-      <h2>Projets sélectionnés</h2>
-      <p>Chaque projet est présenté avec objectif, stack et livrables. Ajoute tes liens GitHub quand tu veux.</p>
+      <h2>Projets Data Science</h2>
+      <p>
+        Projets académiques et professionnels démontrant mes compétences en
+        Machine Learning, NLP, optimisation et industrialisation.
+      </p>
     </div>
 
     <div class="projects-grid">
-      <!-- Projet 1 -->
+
+      <!-- FOOTBALL ANALYTICS -->
       <article class="project">
-        <div class="project-media">
-          <!-- Remplace par une image de projet si tu en as : assets/p1.webp -->
-          <div class="project-placeholder">Simu Marché</div>
-          <!-- <img src="assets/p1.webp" alt="Simulation de marché boursier"> -->
-        </div>
         <div class="project-body">
-          <h3>Simulation de marché boursier : Trader vs IA</h3>
-          <p class="project-desc">
-            Création d’un jeu de simulation en Python : interactions, règles de marché, et logique d’agent
-            pour simuler des décisions.
+          <h3>⚽ Football Analytics Pro — Application Data & ML</h3>
+          <p>
+            Développement d’une application Streamlit exploitant l’API REST
+            Football-Data.org pour analyser des données footballistiques
+            en temps réel et intégrer un module prédictif.
           </p>
+
+          <ul>
+            <li>Connexion API REST & traitement JSON</li>
+            <li>Analyse statistique des performances équipes</li>
+            <li>Module de prédiction probabiliste</li>
+            <li>Visualisation interactive (Plotly)</li>
+            <li>Containerisation Docker & Docker Compose</li>
+            <li>Déploiement Streamlit Cloud</li>
+          </ul>
+
           <div class="tags">
-            <span>Python</span><span>Simulation</span><span>Logique agent</span>
+            <span>Python</span>
+            <span>Streamlit</span>
+            <span>Docker</span>
+            <span>API REST</span>
+            <span>Plotly</span>
           </div>
+
           <div class="project-links">
-            <a href="#" target="_blank" rel="noopener">Repo GitHub</a>
-            <a href="#" target="_blank" rel="noopener">Démo / Notebook</a>
+            <a href="https://github.com/djey31/football-analytics" target="_blank">GitHub</a>
+            <a href="https://football-analytics-final-exam-26.streamlit.app/" target="_blank">Application Live</a>
           </div>
         </div>
       </article>
 
-      <!-- Projet 2 -->
+
+      <!-- VERBATIMS NLP -->
       <article class="project">
-        <div class="project-media">
-          <div class="project-placeholder">Dataviz Canicule</div>
-          <!-- <img src="assets/p2.webp" alt="Cartographie canicule Italie"> -->
-        </div>
         <div class="project-body">
-          <h3>Cartographie & dataviz : canicule été 2022 en Italie</h3>
-          <p class="project-desc">
-            Visualisation des impacts et cartographie exploratoire pour comprendre les zones
-            les plus touchées et communiquer clairement les résultats.
+          <h3>🤖 Analyse des Verbatims Clients — NLP (Assurance)</h3>
+          <p>
+            Analyse de retours clients pour identifier les causes
+            d’insatisfaction et produire des insights décisionnels.
           </p>
+
+          <ul>
+            <li>Nettoyage & prétraitement des textes</li>
+            <li>Vectorisation TF-IDF</li>
+            <li>Clustering thématique</li>
+            <li>Analyse de sentiment</li>
+            <li>Extraction d’insights métier</li>
+          </ul>
+
           <div class="tags">
-            <span>Dataviz</span><span>Cartographie</span><span>Storytelling</span>
-          </div>
-          <div class="project-links">
-            <a href="#" target="_blank" rel="noopener">Repo GitHub</a>
-            <a href="#" target="_blank" rel="noopener">Rapport / Slides</a>
+            <span>Python</span>
+            <span>NLP</span>
+            <span>TF-IDF</span>
+            <span>Clustering</span>
+            <span>Machine Learning</span>
           </div>
         </div>
       </article>
 
-      <!-- Projet 3 -->
+
+      <!-- OPTIMISATION LOGISTIQUE -->
       <article class="project">
-        <div class="project-media">
-          <div class="project-placeholder">Prédiction Traffic</div>
-          <!-- <img src="assets/p3.webp" alt="Modélisation recettes trafic élevé"> -->
-        </div>
         <div class="project-body">
-          <h3>Modélisation : prédire les recettes à fort trafic</h3>
-          <p class="project-desc">
-            Projet en R : préparation des données, variables explicatives, entraînement de modèles,
-            évaluation, et recommandations.
+          <h3>🚚 Optimisation Logistique — Vehicle Routing Problem</h3>
+          <p>
+            Implémentation d’un algorithme d’optimisation des tournées
+            pour réduire coûts et délais opérationnels.
           </p>
+
+          <ul>
+            <li>Modélisation VRP avec PyVroom</li>
+            <li>Optimisation multi-contrainte</li>
+            <li>Déploiement API Flask</li>
+            <li>Dockerisation & infrastructure cloud (Scaleway)</li>
+            <li>Tests en conditions réelles</li>
+          </ul>
+
           <div class="tags">
-            <span>R</span><span>ML</span><span>Évaluation</span>
-          </div>
-          <div class="project-links">
-            <a href="#" target="_blank" rel="noopener">Repo GitHub</a>
-            <a href="#" target="_blank" rel="noopener">Notebook / Rmd</a>
+            <span>Python</span>
+            <span>PyVroom</span>
+            <span>Flask</span>
+            <span>Docker</span>
+            <span>Cloud</span>
           </div>
         </div>
       </article>
 
-      <!-- Projet 4 -->
+
+      <!-- WEB SCRAPING DASHBOARD -->
       <article class="project">
-        <div class="project-media">
-          <div class="project-placeholder">App Santé VBA</div>
-        </div>
         <div class="project-body">
-          <h3>Application “Ma santé et moi” (type Doctolib) — VBA</h3>
-          <p class="project-desc">
-            Conception d’une application de gestion/suivi santé : écrans, formulaires, logique,
-            et automatisations.
+          <h3>📊 Pipeline Data & Dashboard Interactif</h3>
+          <p>
+            Conception d’un pipeline automatisé de web scraping,
+            structuration et visualisation de données.
           </p>
+
+          <ul>
+            <li>Web scraping automatisé</li>
+            <li>Nettoyage & transformation (Pandas)</li>
+            <li>Construction de KPI</li>
+            <li>Dashboard interactif</li>
+          </ul>
+
           <div class="tags">
-            <span>VBA</span><span>Application</span><span>Automatisation</span>
-          </div>
-          <div class="project-links">
-            <a href="#" target="_blank" rel="noopener">Screenshots</a>
-            <a href="#" target="_blank" rel="noopener">Fichier / Demo</a>
+            <span>Python</span>
+            <span>Pandas</span>
+            <span>Web Scraping</span>
+            <span>Streamlit</span>
           </div>
         </div>
       </article>
 
-      <!-- Projet 5 -->
+
+      <!-- PREDICTION TRAFIC -->
       <article class="project">
-        <div class="project-media">
-          <div class="project-placeholder">Site TVstars</div>
-        </div>
         <div class="project-body">
-          <h3>TVstars — Site web pour visualiser films & séries</h3>
-          <p class="project-desc">
-            Projet web : conception d’un site orienté affichage/visualisation, structure,
-            pages, et UI.
+          <h3>📈 Modélisation Prédictive — Trafic Web</h3>
+          <p>
+            Projet en R visant à prédire les recettes générant
+            un trafic élevé via des modèles économétriques et ML.
           </p>
+
+          <ul>
+            <li>Logit & Linear Probability Model</li>
+            <li>Random Forest</li>
+            <li>Évaluation & comparaison de modèles</li>
+            <li>Recommandations stratégiques</li>
+          </ul>
+
           <div class="tags">
-            <span>HTML</span><span>CSS</span><span>JavaScript</span>
-          </div>
-          <div class="project-links">
-            <a href="#" target="_blank" rel="noopener">Repo GitHub</a>
-            <a href="#" target="_blank" rel="noopener">Site en ligne</a>
+            <span>R</span>
+            <span>Logit</span>
+            <span>Random Forest</span>
+            <span>Économétrie</span>
           </div>
         </div>
       </article>
-    </div>
 
-    <div class="note">
-      Astuce : garde 5–6 projets max, mais fais-les “clean” (README, résultats, captures).
     </div>
   </section>
 
-  <!-- SKILLS -->
-  <section id="skills" class="section slide">
+
+  <!-- COMPÉTENCES -->
+  <section id="skills" class="section">
     <div class="section-head">
-      <h2>Stack & compétences</h2>
-      <p>Techniques et outils indiqués dans mon parcours. :contentReference[oaicite:1]{index=1}</p>
+      <h2>Compétences Techniques</h2>
     </div>
 
     <div class="skills-grid">
+
       <div class="skill-card">
         <h3>Langages</h3>
-        <p>Python • R • SQL • JavaScript • MATLAB • VBA • PHP</p>
+        <p>Python • R • SQL • JavaScript • MATLAB • VBA</p>
       </div>
+
       <div class="skill-card">
-        <h3>Data & ML</h3>
-        <p>EDA • Modélisation statistique • Machine Learning • NLP (bases) • Deep Learning (bases)</p>
+        <h3>Data Science & IA</h3>
+        <p>
+          EDA • Feature Engineering • Machine Learning
+          (régression, classification) • NLP
+          • Optimisation • Validation croisée
+        </p>
       </div>
+
       <div class="skill-card">
         <h3>Librairies</h3>
-        <p>scikit-learn • pandas • NumPy • Matplotlib • Seaborn • Tkinter</p>
+        <p>scikit-learn • pandas • NumPy • Matplotlib • Plotly • PyVroom</p>
       </div>
+
       <div class="skill-card">
-        <h3>BI & Outils</h3>
-        <p>Power BI • Tableau • MySQL • Git/GitHub • Bootstrap</p>
+        <h3>Industrialisation</h3>
+        <p>Docker • Docker Compose • API Flask • Streamlit Cloud • Scaleway</p>
       </div>
+
+      <div class="skill-card">
+        <h3>Data Visualisation</h3>
+        <p>Power BI • Tableau • Streamlit • Plotly</p>
+      </div>
+
       <div class="skill-card">
         <h3>Langues</h3>
-        <p>Français (maternelle) • Bambara (maternelle) • Anglais (intermédiaire)</p>
+        <p>Français (maternelle) • Bambara (maternelle) • Anglais (B2)</p>
       </div>
+
     </div>
   </section>
 
-  <!-- CERTIFICATIONS -->
-  <section id="certs" class="section slide">
-    <div class="section-head">
-      <h2>Certifications</h2>
-      <p>Courtes, pertinentes, vérifiables. :contentReference[oaicite:2]{index=2}</p>
-    </div>
-
-    <div class="certs">
-      <div class="cert">
-        <div class="cert-title">IA générative</div>
-        <div class="cert-sub">LinkedIn Learning</div>
-      </div>
-      <div class="cert">
-        <div class="cert-title">Power BI</div>
-        <div class="cert-sub">En cours</div>
-      </div>
-    </div>
-  </section>
 
   <!-- CONTACT -->
-  <section id="contact" class="section slide">
+  <section id="contact" class="section">
     <div class="section-head">
       <h2>Contact</h2>
-      <p>Ouverte aux opportunités CDI junior (Data Scientist / Data Analyst).</p>
+      <p>Ouverte aux opportunités CDI Data Scientist.</p>
     </div>
 
     <div class="contact-card">
       <div>
-        <div class="contact-label">Email</div>
-        <a href="mailto:djenebacoulibaly.pro@gmail.com">djenebacoulibaly.pro@gmail.com</a>
+        <div>Email</div>
+        <a href="mailto:djenebacoulibaly.pro@gmail.com">
+          djenebacoulibaly.pro@gmail.com
+        </a>
       </div>
       <div>
-        <div class="contact-label">LinkedIn</div>
-        <a href="https://www.linkedin.com/in/djénéba-coulibaly-7a24b9272" target="_blank" rel="noopener">
+        <div>LinkedIn</div>
+        <a href="https://www.linkedin.com/in/djénéba-coulibaly-7a24b9272" target="_blank">
           Profil LinkedIn
         </a>
       </div>
       <div>
-        <div class="contact-label">Téléphone</div>
+        <div>Téléphone</div>
         <a href="tel:+33758080679">+33 7 58 08 06 79</a>
       </div>
     </div>
@@ -298,6 +293,5 @@
     <p>© 2026 — Djénéba Coulibaly</p>
   </footer>
 
-  <script src="script.js"></script>
 </body>
 </html>
