Revise portfolio content and descriptions
Updated the portfolio description and various text elements to better reflect skills and projects.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Djénéba Coulibaly — Data Scientist</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Portfolio Data Scientist — Machine Learning, NLP, Optimisation, Assurance & Déploiement." />
+  <meta name="description" content="Portfolio Data Scientist — Machine Learning, NLP, Optimisation, Data Visualisation & Industrialisation." />
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -27,26 +27,23 @@
   <header id="top" class="hero">
 
     <div class="hero-left">
-      <div class="pill">
-        Disponible CDI — Data Scientist (Assurance / Conseil / Big 4)
-      </div>
-
       <h1>Djénéba Coulibaly</h1>
 
       <p class="subtitle">
-        Data Scientist • Machine Learning • NLP • Optimisation • Industrialisation
+        Data Science • Machine Learning • NLP • Optimisation • Data Visualisation
       </p>
 
       <p class="lead">
-        Spécialisée en économétrie et data science, j’accompagne les métiers
-        dans la prise de décision via la modélisation prédictive,
-        l’analyse NLP et le déploiement de solutions data industrialisées.
+        Spécialisée en économétrie et data science, je conçois des solutions analytiques
+        de bout en bout : exploration, modélisation, validation, visualisation
+        et déploiement.
       </p>
 
       <div class="cta">
         <a class="btn primary" href="#projects">Voir mes projets</a>
         <a class="btn ghost" href="assets/cv.pdf" target="_blank">CV (PDF)</a>
         <a class="btn ghost" href="https://github.com/djey31" target="_blank">GitHub</a>
+        <a class="btn ghost" href="https://www.linkedin.com/in/djénéba-coulibaly-7a24b9272" target="_blank">LinkedIn</a>
       </div>
 
       <div class="meta">
@@ -59,20 +56,19 @@
       <div class="profile-card">
         <img src="assets/photo-pro.jpg" alt="Photo Djénéba Coulibaly" class="avatar" />
         <div class="profile-info">
-          <h3>Domaines d'expertise</h3>
+          <h3>Expertises clés</h3>
           <ul>
-            <li>Machine Learning & économétrie</li>
-            <li>NLP & analyse de verbatims</li>
+            <li>Modélisation statistique & ML</li>
+            <li>NLP & analyse textuelle</li>
             <li>Optimisation & recherche opérationnelle</li>
             <li>Déploiement Docker & API</li>
-            <li>Data orientée décision stratégique</li>
+            <li>Visualisation décisionnelle</li>
           </ul>
         </div>
       </div>
     </div>
 
   </header>
-
 
   <!-- À PROPOS -->
   <section id="about" class="section">
@@ -81,15 +77,15 @@
     </div>
 
     <p>
-      Étudiante en Master 2 Économétrie & Statistique (Aix-Marseille School of Economics),
-      je combine rigueur statistique et compétences en machine learning pour transformer
-      la donnée en levier stratégique.
+      Formée en économétrie et statistiques appliquées, j’allie rigueur mathématique
+      et compétences en data science pour transformer la donnée en outil d’aide
+      à la décision.
     </p>
 
     <p>
-      Mon approche repose sur :
-      compréhension métier → exploration data → modélisation →
-      validation → industrialisation → visualisation.
+      Mon approche s’articule autour de cinq étapes : compréhension du besoin,
+      exploration des données, modélisation, évaluation des performances,
+      et industrialisation des solutions.
     </p>
   </section>
 
@@ -107,9 +103,9 @@
         <li>Préparation et structuration de données multi-sources</li>
         <li>Exploration et détection de patterns/anomalies</li>
         <li>Développement de modèles ML (classification, régression)</li>
-        <li>Analyse NLP des verbatims clients (sentiment, clustering)</li>
-        <li>Création dashboards décisionnels (Power BI)</li>
-        <li>Accompagnement des métiers sur l’IA générative</li>
+        <li>Analyse NLP des verbatims clients (nettoyage, vectorisation, clustering)</li>
+        <li>Création de dashboards décisionnels</li>
+        <li>Accompagnement sur des sujets d’IA générative</li>
       </ul>
     </article>
 
@@ -117,11 +113,11 @@
       <h3>Data Scientist — DEKI (Marseille)</h3>
       <p><strong>05/2025 – 08/2025</strong></p>
       <ul>
-        <li>Optimisation logistique via PyVroom (Vehicle Routing Problem)</li>
-        <li>Déploiement API ML (Flask)</li>
+        <li>Optimisation logistique via algorithmes VRP (PyVroom)</li>
+        <li>Déploiement d’API ML (Flask)</li>
         <li>Containerisation Docker & Docker Compose</li>
         <li>Déploiement cloud (Scaleway)</li>
-        <li>Tests en conditions réelles</li>
+        <li>Tests et validation en conditions réelles</li>
       </ul>
     </article>
 
@@ -131,32 +127,44 @@
   <!-- PROJETS -->
   <section id="projects" class="section">
     <div class="section-head">
-      <h2>Projets Data Science</h2>
+      <h2>Projets</h2>
     </div>
 
     <article>
-      <h3>Football Analytics Pro — Application Data & ML</h3>
+      <h3>Football Analytics Pro — Application Data</h3>
       <p>
-        Application Streamlit connectée à une API REST pour analyse
-        footballistique et prédiction.
+        Application Streamlit connectée à une API REST permettant
+        l’analyse statistique et la visualisation interactive de données
+        footballistiques en temps réel.
       </p>
-      <p><strong>Technologies :</strong> Python, Streamlit, Docker, API REST</p>
+      <p><strong>Technologies :</strong> Python, Streamlit, Plotly, Docker</p>
     </article>
 
     <article>
       <h3>Analyse des Verbatims Clients — NLP</h3>
       <p>
-        Extraction d’insights à partir de retours clients assurance.
+        Extraction d’insights à partir de retours clients via
+        vectorisation TF-IDF et méthodes de clustering.
       </p>
-      <p><strong>Technologies :</strong> Python, TF-IDF, Clustering</p>
+      <p><strong>Technologies :</strong> Python, NLP, Machine Learning</p>
     </article>
 
     <article>
       <h3>Modélisation Prédictive — Trafic Web</h3>
       <p>
-        Logit, LPM, Random Forest pour prédire trafic élevé.
+        Modèles économétriques et Random Forest pour prédire
+        le trafic généré par des contenus.
       </p>
-      <p><strong>Technologies :</strong> R, Econométrie, ML</p>
+      <p><strong>Technologies :</strong> R, Logit, Random Forest</p>
+    </article>
+
+    <article>
+      <h3>Pipeline Data & Dashboard</h3>
+      <p>
+        Web scraping automatisé, structuration des données
+        et construction d’un dashboard interactif.
+      </p>
+      <p><strong>Technologies :</strong> Python, Pandas, Streamlit</p>
     </article>
 
   </section>
@@ -176,7 +184,7 @@
         <li>Optimisation</li>
         <li>Économétrie avancée</li>
         <li>Programmation orientée objet</li>
-        <li>Risque & décision</li>
+        <li>Analyse du risque & décision</li>
       </ul>
     </article>
 
@@ -195,12 +203,13 @@
     </div>
 
     <ul>
-      <li><strong>Langages :</strong> Python, R, SQL</li>
-      <li><strong>ML :</strong> scikit-learn, Random Forest, Logit</li>
-      <li><strong>NLP :</strong> TF-IDF, clustering, sentiment analysis</li>
-      <li><strong>Déploiement :</strong> Docker, Flask, Streamlit Cloud</li>
-      <li><strong>BI :</strong> Power BI, Tableau</li>
-      <li><strong>Cloud :</strong> Scaleway</li>
+      <li><strong>Langages :</strong> Python, R, SQL, JavaScript, MATLAB, VBA</li>
+      <li><strong>Machine Learning :</strong> régression, classification, Random Forest, validation croisée</li>
+      <li><strong>NLP :</strong> nettoyage texte, TF-IDF, clustering, analyse de sentiment</li>
+      <li><strong>Optimisation :</strong> Vehicle Routing Problem</li>
+      <li><strong>Data Visualisation :</strong> Power BI, Tableau, Plotly, Streamlit</li>
+      <li><strong>Déploiement :</strong> Docker, Flask, Streamlit Cloud, Scaleway</li>
+      <li><strong>Bases de données :</strong> MySQL</li>
     </ul>
   </section>
 
