Refactor index.html for improved structure and content
Removed and updated various sections in the HTML structure, including navigation, hero section, and skills. Enhanced content clarity and organization.

--- a/index.html
+++ b/index.html
@@ -4,229 +4,174 @@
   <meta charset="UTF-8" />
   <title>Djénéba Coulibaly — Data Scientist</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Portfolio Data Scientist — Machine Learning, NLP, Optimisation, Data Visualisation & Industrialisation." />
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-  <!-- NAVIGATION -->
-  <nav class="nav">
-    <a class="brand" href="#top">Djénéba Coulibaly</a>
-    <div class="nav-links">
-      <a href="#about">À propos</a>
-      <a href="#experience">Expériences</a>
-      <a href="#projects">Projets</a>
-      <a href="#education">Formation</a>
-      <a href="#skills">Compétences</a>
-      <a href="#contact">Contact</a>
-    </div>
-  </nav>
+<nav class="nav">
+  <div class="brand">Djénéba Coulibaly</div>
+  <div class="nav-links">
+    <a href="#about">À propos</a>
+    <a href="#experience">Expériences</a>
+    <a href="#projects">Projets</a>
+    <a href="#skills">Compétences</a>
+    <a href="#tools">Logiciels</a>
+    <a href="#contact">Contact</a>
+  </div>
+</nav>
 
-  <!-- HERO -->
-  <header id="top" class="hero">
-
-    <div class="hero-left">
+<header class="hero">
+  <div class="hero-content">
+    <div class="hero-text">
       <h1>Djénéba Coulibaly</h1>
-
-      <p class="subtitle">
-        Data Science • Machine Learning • NLP • Optimisation • Data Visualisation
+      <p class="subtitle">Data Science • Machine Learning • NLP • Optimisation</p>
+      <p>
+        Spécialisée en économétrie et data science, je développe des solutions
+        analytiques complètes : exploration, modélisation, validation et déploiement.
       </p>
-
-      <p class="lead">
-        Spécialisée en économétrie et data science, je conçois des solutions analytiques
-        de bout en bout : exploration, modélisation, validation, visualisation
-        et déploiement.
-      </p>
-
-      <div class="cta">
-        <a class="btn primary" href="#projects">Voir mes projets</a>
-        <a class="btn ghost" href="assets/cv.pdf" target="_blank">CV (PDF)</a>
-        <a class="btn ghost" href="https://github.com/djey31" target="_blank">GitHub</a>
-        <a class="btn ghost" href="https://www.linkedin.com/in/djénéba-coulibaly-7a24b9272" target="_blank">LinkedIn</a>
-      </div>
-
-      <div class="meta">
-        <span>📍 Paris</span>
-        <span>✉️ djenebacoulibaly.pro@gmail.com</span>
+      <div class="buttons">
+        <a href="assets/cv.pdf" target="_blank" class="btn primary">CV</a>
+        <a href="https://github.com/djey31" target="_blank" class="btn ghost">GitHub</a>
       </div>
     </div>
 
-    <div class="hero-right">
-      <div class="profile-card">
-        <img src="assets/photo-pro.jpg" alt="Photo Djénéba Coulibaly" class="avatar" />
-        <div class="profile-info">
-          <h3>Expertises clés</h3>
-          <ul>
-            <li>Modélisation statistique & ML</li>
-            <li>NLP & analyse textuelle</li>
-            <li>Optimisation & recherche opérationnelle</li>
-            <li>Déploiement Docker & API</li>
-            <li>Visualisation décisionnelle</li>
-          </ul>
-        </div>
-      </div>
+    <div class="hero-photo">
+      <img src="assets/photo-pro.jpg" alt="Photo Djénéba">
     </div>
+  </div>
+</header>
 
-  </header>
+<!-- À PROPOS -->
+<section id="about" class="section">
+  <h2>À propos de moi</h2>
 
-  <!-- À PROPOS -->
-  <section id="about" class="section">
-    <div class="section-head">
-      <h2>À propos</h2>
-    </div>
-
+  <div class="card">
     <p>
-      Formée en économétrie et statistiques appliquées, j’allie rigueur mathématique
-      et compétences en data science pour transformer la donnée en outil d’aide
-      à la décision.
+      Formée en économétrie et statistiques appliquées, je combine rigueur
+      mathématique et expertise en data science pour transformer la donnée
+      en levier d’aide à la décision.
     </p>
 
     <p>
-      Mon approche s’articule autour de cinq étapes : compréhension du besoin,
-      exploration des données, modélisation, évaluation des performances,
-      et industrialisation des solutions.
+      Mon approche : compréhension métier → exploration des données →
+      modélisation → évaluation → industrialisation.
     </p>
-  </section>
+  </div>
 
-
-  <!-- EXPÉRIENCES -->
-  <section id="experience" class="section">
-    <div class="section-head">
-      <h2>Expériences professionnelles</h2>
-    </div>
-
-    <article>
-      <h3>Data Scientist — Diot-Siaci (Paris)</h3>
-      <p><strong>09/2025 – Aujourd’hui</strong></p>
-      <ul>
-        <li>Préparation et structuration de données multi-sources</li>
-        <li>Exploration et détection de patterns/anomalies</li>
-        <li>Développement de modèles ML (classification, régression)</li>
-        <li>Analyse NLP des verbatims clients (nettoyage, vectorisation, clustering)</li>
-        <li>Création de dashboards décisionnels</li>
-        <li>Accompagnement sur des sujets d’IA générative</li>
-      </ul>
-    </article>
-
-    <article>
-      <h3>Data Scientist — DEKI (Marseille)</h3>
-      <p><strong>05/2025 – 08/2025</strong></p>
-      <ul>
-        <li>Optimisation logistique via algorithmes VRP (PyVroom)</li>
-        <li>Déploiement d’API ML (Flask)</li>
-        <li>Containerisation Docker & Docker Compose</li>
-        <li>Déploiement cloud (Scaleway)</li>
-        <li>Tests et validation en conditions réelles</li>
-      </ul>
-    </article>
-
-  </section>
-
-
-  <!-- PROJETS -->
-  <section id="projects" class="section">
-    <div class="section-head">
-      <h2>Projets</h2>
-    </div>
-
-    <article>
-      <h3>Football Analytics Pro — Application Data</h3>
-      <p>
-        Application Streamlit connectée à une API REST permettant
-        l’analyse statistique et la visualisation interactive de données
-        footballistiques en temps réel.
-      </p>
-      <p><strong>Technologies :</strong> Python, Streamlit, Plotly, Docker</p>
-    </article>
-
-    <article>
-      <h3>Analyse des Verbatims Clients — NLP</h3>
-      <p>
-        Extraction d’insights à partir de retours clients via
-        vectorisation TF-IDF et méthodes de clustering.
-      </p>
-      <p><strong>Technologies :</strong> Python, NLP, Machine Learning</p>
-    </article>
-
-    <article>
-      <h3>Modélisation Prédictive — Trafic Web</h3>
-      <p>
-        Modèles économétriques et Random Forest pour prédire
-        le trafic généré par des contenus.
-      </p>
-      <p><strong>Technologies :</strong> R, Logit, Random Forest</p>
-    </article>
-
-    <article>
-      <h3>Pipeline Data & Dashboard</h3>
-      <p>
-        Web scraping automatisé, structuration des données
-        et construction d’un dashboard interactif.
-      </p>
-      <p><strong>Technologies :</strong> Python, Pandas, Streamlit</p>
-    </article>
-
-  </section>
-
-
-  <!-- FORMATION -->
-  <section id="education" class="section">
-    <div class="section-head">
-      <h2>Formation</h2>
-    </div>
-
-    <article>
-      <h3>Master Économétrie & Statistique — Data Science</h3>
-      <p>Aix-Marseille School of Economics (2021–2026)</p>
-      <ul>
-        <li>Machine Learning</li>
-        <li>Optimisation</li>
-        <li>Économétrie avancée</li>
-        <li>Programmation orientée objet</li>
-        <li>Analyse du risque & décision</li>
-      </ul>
-    </article>
-
-    <article>
-      <h3>Licence Mathématiques Appliquées</h3>
-      <p>Université Aix-Marseille</p>
-    </article>
-
-  </section>
-
-
-  <!-- COMPÉTENCES -->
-  <section id="skills" class="section">
-    <div class="section-head">
-      <h2>Compétences Techniques</h2>
-    </div>
-
+  <div class="card highlight">
+    <h3>🧠 Points forts</h3>
     <ul>
-      <li><strong>Langages :</strong> Python, R, SQL, JavaScript, MATLAB, VBA</li>
-      <li><strong>Machine Learning :</strong> régression, classification, Random Forest, validation croisée</li>
-      <li><strong>NLP :</strong> nettoyage texte, TF-IDF, clustering, analyse de sentiment</li>
-      <li><strong>Optimisation :</strong> Vehicle Routing Problem</li>
-      <li><strong>Data Visualisation :</strong> Power BI, Tableau, Plotly, Streamlit</li>
-      <li><strong>Déploiement :</strong> Docker, Flask, Streamlit Cloud, Scaleway</li>
-      <li><strong>Bases de données :</strong> MySQL</li>
+      <li>Analyse prédictive & Machine Learning</li>
+      <li>NLP & analyse de verbatims</li>
+      <li>Optimisation & recherche opérationnelle</li>
+      <li>Déploiement Docker & API</li>
     </ul>
-  </section>
+  </div>
+</section>
 
 
-  <!-- CONTACT -->
-  <section id="contact" class="section">
-    <div class="section-head">
-      <h2>Contact</h2>
+<!-- EXPÉRIENCES -->
+<section id="experience" class="section">
+  <h2>Expériences professionnelles</h2>
+
+  <div class="grid">
+
+    <div class="card experience">
+      <h3>Data Scientist — Diot-Siaci</h3>
+      <span class="date">09/2025 – Aujourd’hui</span>
+      <ul>
+        <li>Préparation de données multi-sources</li>
+        <li>Développement modèles ML</li>
+        <li>Analyse NLP des verbatims</li>
+        <li>Création dashboards décisionnels</li>
+      </ul>
     </div>
 
-    <p>Email : djenebacoulibaly.pro@gmail.com</p>
-    <p>LinkedIn : www.linkedin.com/in/djénéba-coulibaly-7a24b9272</p>
-  </section>
+    <div class="card experience">
+      <h3>Data Scientist — DEKI</h3>
+      <span class="date">05/2025 – 08/2025</span>
+      <ul>
+        <li>Optimisation logistique (VRP)</li>
+        <li>API Flask & Docker</li>
+        <li>Déploiement Cloud</li>
+        <li>Tests en conditions réelles</li>
+      </ul>
+    </div>
 
-  <footer class="footer">
-    <p>© 2026 — Djénéba Coulibaly</p>
-  </footer>
+  </div>
+</section>
+
+
+<!-- PROJETS -->
+<section id="projects" class="section">
+  <h2>Projets</h2>
+
+  <div class="grid">
+
+    <div class="card">
+      <h3>Football Analytics</h3>
+      <p>Application Streamlit connectée à une API REST avec visualisations interactives.</p>
+      <span class="tag">Python</span>
+      <span class="tag">Docker</span>
+      <span class="tag">API</span>
+    </div>
+
+    <div class="card">
+      <h3>Analyse Verbatims — NLP</h3>
+      <p>Extraction d’insights via TF-IDF et clustering.</p>
+      <span class="tag">NLP</span>
+      <span class="tag">ML</span>
+    </div>
+
+    <div class="card">
+      <h3>Modélisation Prédictive</h3>
+      <p>Logit & Random Forest pour prédiction trafic web.</p>
+      <span class="tag">R</span>
+      <span class="tag">Économétrie</span>
+    </div>
+
+  </div>
+</section>
+
+
+<!-- COMPÉTENCES -->
+<section id="skills" class="section">
+  <h2>Compétences techniques</h2>
+
+  <div class="card">
+    <p><strong>Langages :</strong> Python, R, SQL, JavaScript</p>
+    <p><strong>ML :</strong> Régression, Classification, Random Forest</p>
+    <p><strong>NLP :</strong> TF-IDF, Clustering, Sentiment Analysis</p>
+    <p><strong>Optimisation :</strong> Vehicle Routing Problem</p>
+  </div>
+</section>
+
+
+<!-- LOGICIELS -->
+<section id="tools" class="section">
+  <h2>Logiciels & Outils</h2>
+
+  <div class="card">
+    <p>Docker • Flask • Streamlit • Power BI • Tableau • Git • GitHub • MySQL • Scaleway</p>
+  </div>
+</section>
+
+
+<!-- CONTACT -->
+<section id="contact" class="section">
+  <h2>Contact</h2>
+
+  <div class="card contact">
+    <p>📍 Paris</p>
+    <p>✉️ djenebacoulibaly.pro@gmail.com</p>
+    <p>LinkedIn : djénéba-coulibaly</p>
+  </div>
+</section>
+
+<footer>
+  <p>© 2026 Djénéba Coulibaly</p>
+</footer>
 
 </body>
 </html>
